crates/wdl-ast/tests/validation/conflicting-imports/source.errors
error: conflicting import namespace `foo`
  ┌─ tests/validation/conflicting-imports/source.wdl:6:8
  │
5 │ import "foo.wdl"                                    # First
  │        --------- the conflicting import namespace was introduced here
6 │ import "foo"                                        # Conflicts
  │        ^^^^^ this conflicts with another import namespace
  │
  = fix: add an `as` clause to the import to specify a namespace

error: import namespace is not a valid WDL identifier
  ┌─ tests/validation/conflicting-imports/source.wdl:7:8
  │
7 │ import "bad-file-name.wdl"                          # Bad name
  │        ^^^^^^^^^^^^^^^^^^^ a namespace name cannot be derived from this import path
  │
  = fix: add an `as` clause to the import to specify a namespace

error: conflicting import namespace `baz`
   ┌─ tests/validation/conflicting-imports/source.wdl:12:22
   │
11 │ import "/baz.wdl"                                   # First
   │        ---------- the conflicting import namespace was introduced here
12 │ import "/Baz.wdl" as baz                            # Conflicts
   │                      ^^^ this conflicts with another import namespace

error: conflicting import namespace `baz`
   ┌─ tests/validation/conflicting-imports/source.wdl:13:8
   │
11 │ import "/baz.wdl"                                   # First
   │        ---------- the conflicting import namespace was introduced here
12 │ import "/Baz.wdl" as baz                            # Conflicts
13 │ import "../foo/bar/baz.wdl"                         # Conflicts
   │        ^^^^^^^^^^^^^^^^^^^^ this conflicts with another import namespace
   │
   = fix: add an `as` clause to the import to specify a namespace

error: conflicting import namespace `foo`
   ┌─ tests/validation/conflicting-imports/source.wdl:14:8
   │
 5 │ import "foo.wdl"                                    # First
   │        --------- the conflicting import namespace was introduced here
   ·
14 │ import "https://example.com/foo.wdl#something"      # Conflicts
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this conflicts with another import namespace
   │
   = fix: add an `as` clause to the import to specify a namespace

error: conflicting import namespace `qux`
   ┌─ tests/validation/conflicting-imports/source.wdl:16:8
   │
15 │ import "https://example.com/qux.wdl?query=nope"     # First
   │        ---------------------------------------- the conflicting import namespace was introduced here
16 │ import "qux.wdl"                                    # Conflicts
   │        ^^^^^^^^^ this conflicts with another import namespace
   │
   = fix: add an `as` clause to the import to specify a namespace

error: conflicting import namespace `foo`
   ┌─ tests/validation/conflicting-imports/source.wdl:17:8
   │
 5 │ import "foo.wdl"                                    # First
   │        --------- the conflicting import namespace was introduced here
   ·
17 │ import "https://example.com/%66%6F%6F.wdl"          # Conflicts
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this conflicts with another import namespace
   │
   = fix: add an `as` clause to the import to specify a namespace

error: import namespace is not a valid WDL identifier
   ┌─ tests/validation/conflicting-imports/source.wdl:18:8
   │
18 │ import "https://example.com?query=foo"              # Bad name
   │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ a namespace name cannot be derived from this import path
   │
   = fix: add an `as` clause to the import to specify a namespace

